fixed scroll vertical only
next step: nice custom scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -282,6 +282,7 @@ blockquote {
     float: left;
     margin: 0 30px 30px 0;
     height: 290px;
+    overflow-x: hidden;
     overflow-y: scroll;
     border: 3px solid black;
     -moz-box-shadow: 8px 8px black;
@@ -293,6 +294,7 @@ blockquote {
     border-bottom: 0;
     border-right: 0;
     background-color: transparent;
+    overflow: hidden;
 }
 .list-group-item:first-child, .list-group-item:last-child {
     border-top-left-radius: 0px;
